--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 @import "../bower_components/normalize-scss/_normalize.scss";
 @import "../bower_components/typeplate-starter-kit/css/_typeplate.scss";
 @import "./mixins.scss";
-
+@import url("http://fonts.googleapis.com/css?family=Lato:100,100italic,300,400,700");
 /**
  * BOX-SIZING
  */
@@ -9,7 +9,6 @@
 *, *:before, *:after {
     box-sizing: border-box;
 }
-
 /**
  * GRIDS
  */
@@ -20,7 +19,6 @@
     font-size: 0;
     text-align: justify;
     position: relative;
-
     & > * {
         font-size: medium;
         text-align: left;
@@ -28,7 +26,6 @@
         width: 100%;
         vertical-align: top;
     }
-
     &:after {
         display: inline-block;
         width: 100%;
@@ -36,10 +33,9 @@
         font-size: medium;
     }
 }
-
+@include gridify(2, 0);
 @include gridify(2, 400);
 @include gridify(4, 600);
-
 /**
  * PACE (automatic pre-loader thingy)
  */
@@ -49,15 +45,12 @@
     user-select: none;
     transition: all 1s ease;
 }
-
 .pace-inactive {
     opacity: 0;
 }
-
 .pace-active {
     opacity: 1;
 }
-
 .pace .pace-progress {
     background: #2299dd;
     position: fixed;
@@ -68,13 +61,178 @@
     height: 2px;
     transition: all 1s ease;
 }
-
 /**
  * GENERAL
  */
 
-img {max-width:100%;}
-
+img {
+    max-width: 100%;
+}
+html {
+	height: 100%;
+}
 body {
     transition: opacity .25s ease;
+    font-family: Lato;
+    font-weight: 100;
+    height: 100%;
+}
+main {
+    max-width: 50em;
+    margin: 0 auto;
+    position: relative;
+    min-height: 100%;
+}
+.add {
+    position: relative;
+    padding: 1em;
+    input[type="text"] {
+        width: 100%;
+        margin-right: 3em;
+        padding: 1em;
+        height: 1.6em;
+    }
+    button {
+        width: 1.6rem;
+        height: 1.6rem;
+        line-height: .8rem;
+        position: absolute;
+        top: 1.3rem;
+        right: 1.5rem;
+        background-color: #fff;
+        font-size: 2em;
+        border: 0;
+    }
+}
+.list {
+    padding: 1em;
+    ul {
+        list-style: none;
+        padding: 0;
+        li {
+            border-bottom: 1px solid #ccc;
+            padding: .5em 0;
+            &:last-child {
+                border-bottom: 0;
+            }
+            a {
+                text-decoration: none;
+                color: inherit;
+            }
+            span {
+                font-size: 2em;
+            }
+            input[type="checkbox"] {
+                display: none;
+            }
+            input[type="checkbox"] + label {
+                padding: 1.5em 1.5em 1.5em .5em;
+                position: relative;
+                &:before, &:after {
+                    content: "";
+                    position: absolute;
+                    height: 1.5em;
+                    width: 1.5em;
+                    top: 0;
+                    border-left: 1px solid red;
+                    transform: height .2s ease;
+                }
+                &:before {
+                    transform: translateY(100%) rotateZ(45deg);
+                }
+                &:after {
+                    transform: translateY(32.5%) rotateZ(-45deg);
+                }
+            }
+            input[type="checkbox"]:checked + label {
+                &:before, &:after {
+                    border-color: green;
+                    border-left: 0;
+                }
+                &:before {
+                    height: 1.25em;
+                    width: .6em;
+                    border-right: 1px solid green;
+                    border-bottom: 1px solid green;
+                    transform: translateY(65%) rotateZ(45deg);
+                }
+                &:after {
+                    height: 0;
+                }
+            }
+            input[type="checkbox"]:checked ~ a {
+                text-decoration: line-through;
+                font-style: italic;
+                color: #999;
+            }
+        }
+    }
+}
+.itemcontainer {
+    max-width: 35em;
+    border-top: 1px solid #ccc;
+    border-left: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    min-height: 100vh;
+    margin: 0 auto;
+    top: .5em;
+    text-align: center;
+    background: #fff;
+    position: relative;
+    display: none;
+    padding-top: 2.5em;
+    h1 {
+        font-size: 3.5rem;
+        font-weight: 100;
+    }
+    input {
+        margin: 0 auto;
+        font-size: 3em;
+    }
+}
+.options {
+    position: absolute;
+    top: 0;
+    right: 0;
+    // border-left: 1px solid #ccc;
+    // border-bottom: 1px solid #ccc;
+    font-size: 1.5em;
+    & > * {
+        display: inline-block;
+    }
+    a {
+    	text-decoration: none;
+    	color: inherit;
+    }
+}
+.close {
+    width: 1.6em;
+    height: 1.6em;
+    cursor: pointer;
+}
+.fade {
+    opacity: .5;
+    position: absolute;
+}
+.show {
+    display: block;
+}
+.usercontainer {
+	max-width: 20rem;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+.login, .register {
+	margin: 0 auto;
+	text-align: center;
+	input {
+		display: block;
+		margin: .5em auto;
+	}
+	h3 {
+		margin-bottom: .3em;
+		font-weight: 100;
+	}
 }
